[package]
description = "Hypex's GUI theme and helpers, built around egui"
license = "(MIT OR Apache-2.0) AND OFL-1.1"
name = "hypex_ui"
publish = true
repository = "https://github.com/SkyfallWasTaken/hypex_ui"
readme = "README.md"
version = "0.22.0"
edition = "2021"
include = [
  "LICENSE-MIT.md",
  "LICENSE-APACHE.md",
  "**/*.rs",
  "Cargo.toml",
  "data/*",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["eframe"]
eframe = ["dep:eframe"]

[dependencies]
egui_extras = "0.22"
egui = "0.22"
image = { version = "0.24", default-features = false, features = ["png"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
sublime_fuzzy = "0.7"

## Optional dependencies:
eframe = { version = "0.22", optional = true, default-features = false }

[dev-dependencies]
eframe = { version = "0.22", default-features = false, features = ["wgpu"] }
egui_tiles = "0.2"
re_log = "0.8"
